--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   // "php.validate.executablePath": ""
-  "php.validate.executablePath": "D://xampp//php//php.exe"
+  "php.validate.executablePath": "C://xampp//php//php.exe"
 }
