--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   // "php.validate.executablePath": ""
-  "php.validate.executablePath": "C://xampp//php//php.exe"
+  "php.validate.executablePath": "C://xampp//php//php.exe",
+  "files.eol": "\n"
 }
