--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   // "php.validate.executablePath": ""
-  "php.validate.executablePath": "C://xampp//php//php.exe",
+  "php.validate.executablePath": "/usr/lib/php7.4",
   "files.eol": "\n"
 }
