--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   // "php.validate.executablePath": ""
-  "php.validate.executablePath": "/usr/lib/php7.4",
+  "php.validate.executablePath": "/usr/lib/php",
   "files.eol": "\n"
 }
