--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   // "php.validate.executablePath": ""
-  "php.validate.executablePath": "/usr/lib/php",
+  "php.validate.executablePath": "C:/xampp/php/php.exe",
   "files.eol": "\n"
 }
